--- a/web/WEB-INF/web.xml
+++ b/web/WEB-INF/web.xml
@@ -9,11 +9,11 @@
         </init-param>
         <init-param>
             <param-name>debug</param-name>
-            <param-value>2</param-value>
+            <param-value>2</param-value><!--niveau de deboggage des servlets -->
         </init-param>
         <init-param>
             <param-name>detail</param-name>
-            <param-value>2</param-value>
+            <param-value>2</param-value><!--orde d'execution des servlets -->
         </init-param>
         <load-on-startup>2</load-on-startup>
     </servlet>
