commit xml properties. MODIFICATION, j'ai commencé à faire les premier formulaire

--- a/src/java/com/myapp/struts/ApplicationResource.properties
+++ b/src/java/com/myapp/struts/ApplicationResource.properties
@@ -33,8 +33,18 @@ error.search.ssNum.invalid=Invalid Social Security Number
 label.search.name=Name
 label.search.ssNum=Social Security Number
 
-label.add.name=Enter your name
-label.add.ssNum=Enter your Social Security Number 
+label.add.identifiant=Entrer votre identifiant
+label.add.mail=Entrer votre mail
+
+label.add.nom=Entre votre name
+label.add.prenom=Entre votre prenom
+label.add.ssNum=Entre votre ssNum
+label.add.motdepasse=mdp de merde
+
+label.add2.nom=Entrer votre nom
+label.add2.prenom=Entrer votre prenom
+label.add2.mail=Entrer votre mail
+label.add2.motdepasse=Entrer votre mot de passe
 
 error.header=<font color="red"></font>
 
