Beaucoup de modifications effectuées. Mise en place des premières pages avec le code métier. Code effectué au niveau des étudiants, pas pour le reste.

--- a/src/java/com/myapp/struts/ApplicationResource.properties
+++ b/src/java/com/myapp/struts/ApplicationResource.properties
@@ -30,7 +30,7 @@ welcome.message=It's easy to create Struts applications with NetBeans.
 
 error.search.criteria.missing=Search Criteria Missing
 error.search.ssNum.invalid=Invalid Social Security Number
-label.search.name=Name
+label.search.name=Ecrivez votre actualit\u00e9
 label.search.ssNum=Social Security Number
 
 label.add.identifiant=Entrer votre identifiant
@@ -48,5 +48,6 @@ label.add2.motdepasse=Entrer votre mot de passe
 
 error.header=<font color="red"></font>
 
-error.add.criteria.missing=Search Criteria Missing
+error.add.criteria.missing= <span class="redText"> Vous avez oublier de remplir un champ et ce type, {0}! {1} </span>
 error.add.ssNum.invalid=Invalid Social Security Number
+error.name.required=message requit pour une acualit\u00e9
