--- a/src/java/com/myapp/struts/ApplicationResource.properties
+++ b/src/java/com/myapp/struts/ApplicationResource.properties
@@ -51,3 +51,13 @@ error.header=<font color="red"></font>
 error.add.criteria.missing= <span class="redText"> Vous avez oublier de remplir un champ et ce type, {0}! {1} </span>
 error.add.ssNum.invalid=Invalid Social Security Number
 error.name.required=message requit pour une acualit\u00e9
+
+error.login=Compte
+error.login.required=Le champ {0} doit \u00eatre rempli.
+
+error.pass=Mot de passe
+error.pass.required=Le champ {0} doit \u00eatre rempli.
+
+error.account=Erreur lors de connexion au compte
+error.account.nofind=Aucun compte ne correspond au {0} : {1}
+error.account.manyfinds=Plusieurs comptes correspondes au {0} : {1}
