--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -27,6 +27,7 @@ endorsed.classpath=\
     ${libs.javaee-endorsed-api-6.0.classpath}
 excludes=
 file.reference.derbyclient.jar=C:\\Program Files (x86)\\glassfish-3.1.2.2\\javadb\\lib\\derbyclient.jar
+file.reference.derbyclient.jar-1=C:\\Program Files\\Java\\jdk1.7.0_10\\db\\lib\\derbyclient.jar
 includes=**
 j2ee.compile.on.save=true
 j2ee.copy.static.files.on.save=true
@@ -43,7 +44,8 @@ jar.compress=false
 javac.classpath=\
     ${libs.struts.classpath}:\
     ${libs.hibernate-support.classpath}:\
-    ${file.reference.derbyclient.jar}
+    ${file.reference.derbyclient.jar}:\
+    ${file.reference.derbyclient.jar-1}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
