--- a/web/WEB-INF/web.xml
+++ b/web/WEB-INF/web.xml
@@ -27,6 +27,6 @@
         </session-timeout>
     </session-config>
     <welcome-file-list>
-        <welcome-file>/jsp/add.jsp</welcome-file>
+        <welcome-file>/jsp/compteLogin.jsp</welcome-file>
     </welcome-file-list>
 </web-app>
