gestion des exceptions en plus pour se connecter (login)

--- a/src/java/com/myapp/struts/ApplicationResource.properties
+++ b/src/java/com/myapp/struts/ApplicationResource.properties
@@ -53,10 +53,10 @@ error.add.ssNum.invalid=Invalid Social Security Number
 error.name.required=message requit pour une acualit\u00e9
 
 error.login=Compte
-error.login.required=Le champ {0} doit \u00eatre rempli.
+error.login.required=Le champ Compte doit \u00eatre rempli.
 
 error.pass=Mot de passe
-error.pass.required=Le champ {0} doit \u00eatre rempli.
+error.pass.required=Le champ Mot de passe doit \u00eatre rempli.
 
 error.account=Erreur lors de connexion au compte
 error.account.nofind=Aucun compte ne correspond au {0} : {1}
