--- a/src/java/com/myapp/struts/ApplicationResource.properties
+++ b/src/java/com/myapp/struts/ApplicationResource.properties
@@ -52,6 +52,19 @@ error.add.criteria.missing= <span class="redText"> Vous avez oublier de remplir 
 error.add.ssNum.invalid=Invalid Social Security Number
 error.name.required=message requit pour une acualit\u00e9
 
+# -- donn\u00e9s formulaire inscription --
+# -- label formulaire inscription Etudiant
+label.nom=Nom
+label.prenom=Prenom
+label.mail=Mail
+label.pass=Mot de passe
+
+#-- Erreur formulaire inscription Etudiant
+error.nomEtudiant.required=Le champ Nom doit \u00eatre rempli.
+error.prenomEtudiant.required=Le champ Prenom doit \u00eatre rempli.
+error.passEtudiant.required=Le champ Mot de passe doit \u00eatre rempli.
+error.mailEtudiant.required=Le champ Mail doit \u00eatre rempli.
+
 error.login=Compte
 error.login.required=Le champ Compte doit \u00eatre rempli.
 
