Inscription etudiant avec l'insertion dans les tables COMPTE et  ETUDIANT

--- a/src/java/com/myapp/struts/ApplicationResource.properties
+++ b/src/java/com/myapp/struts/ApplicationResource.properties
@@ -55,15 +55,21 @@ error.name.required=message requit pour une acualit\u00e9
 # -- donn\u00e9s formulaire inscription --
 # -- label formulaire inscription Etudiant
 label.nom=Nom
-label.prenom=Prenom
-label.mail=Mail
+label.prenom=Pr\u00e9nom
+label.mail=Votre adresse \u00e9lectronique
+label.mail2=Saisissez \u00e0 nouveau votre adresse \u00e9lectronique
 label.pass=Mot de passe
+label.dateNaissance=Anniversaire
+label.homme=HOMME
+label.femme=FEMME
 
 #-- Erreur formulaire inscription Etudiant
 error.nomEtudiant.required=Le champ Nom doit \u00eatre rempli.
 error.prenomEtudiant.required=Le champ Prenom doit \u00eatre rempli.
 error.passEtudiant.required=Le champ Mot de passe doit \u00eatre rempli.
 error.mailEtudiant.required=Le champ Mail doit \u00eatre rempli.
+error.mailNonIdemtique.required=Les adresses electroniques ne sont pas identiques
+error.invalidMail.required=Adresse electronique invalide
 
 error.login=Compte
 error.login.required=Le champ Compte doit \u00eatre rempli.
