--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -27,7 +27,8 @@ dist.war=${dist.dir}/${war.name}
 endorsed.classpath=\
     ${libs.javaee-endorsed-api-6.0.classpath}
 excludes=
-file.reference.derbyclient.jar=C:\\Program Files (x86)\\glassfish-3.1.2.2\\javadb\\lib\\derbyclient.jar
+file.reference.derby.jar=C:\\Program Files\\Java\\jdk1.7.0_10\\db\\lib\\derby.jar
+file.reference.derbyclient.jar=C:\\Program Files\\Java\\jdk1.7.0_10\\db\\lib\\derbyclient.jar
 file.reference.derbyclient.jar-1=C:\\Program Files (x86)\\Java\\jdk1.7.0\\db\\lib\\derbyclient.jar
 includes=**
 j2ee.compile.on.save=true
@@ -45,8 +46,9 @@ jar.compress=false
 javac.classpath=\
     ${libs.struts.classpath}:\
     ${libs.hibernate-support.classpath}:\
-    ${file.reference.derbyclient.jar}:\
-    ${file.reference.derbyclient.jar-1}
+    ${file.reference.derbyclient.jar-1}:\
+    ${file.reference.derby.jar}:\
+    ${file.reference.derbyclient.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
