Inscription etudiant avec l'insertion dans les tables COMPTE et  ETUDIANT et la gestion des exceptions du formulaire

--- a/src/java/com/myapp/struts/ApplicationResource.properties
+++ b/src/java/com/myapp/struts/ApplicationResource.properties
@@ -70,6 +70,7 @@ error.passEtudiant.required=Le champ Mot de passe doit \u00eatre rempli.
 error.mailEtudiant.required=Le champ Mail doit \u00eatre rempli.
 error.mailNonIdemtique.required=Les adresses electroniques ne sont pas identiques
 error.invalidMail.required=Adresse electronique invalide
+error.dateNaissance.required=Le champ Anniversaire doit \u00eatre rempli
 
 error.login=Compte
 error.login.required=Le champ Compte doit \u00eatre rempli.
