Début mis en place des liens entre étudiants

--- a/src/java/com/myapp/struts/ApplicationResource.properties
+++ b/src/java/com/myapp/struts/ApplicationResource.properties
@@ -63,6 +63,8 @@ label.dateNaissance=Anniversaire
 label.homme=HOMME
 label.femme=FEMME
 
+label.search.nom=nom
+
 #-- Erreur formulaire inscription Etudiant
 error.nomEtudiant.required=Le champ Nom doit \u00eatre rempli.
 error.prenomEtudiant.required=Le champ Prenom doit \u00eatre rempli.
