Ajout de page d'inscription pour l'entreprise

--- a/src/java/com/myapp/struts/ApplicationResource.properties
+++ b/src/java/com/myapp/struts/ApplicationResource.properties
@@ -72,6 +72,21 @@ error.mailNonIdemtique.required=Les adresses electroniques ne sont pas identique
 error.invalidMail.required=Adresse electronique invalide
 error.dateNaissance.required=Le champ Anniversaire doit \u00eatre rempli
 
+#-- label formulaire inscription Entreprise
+label.nom.Entreprise= Nom Entreprise
+label.mail.Entreprise= Adresse \u00e9lectronique de contact
+label.mail.Entreprise2=Saisissez \u00e0 nouveau l'adresse \u00e9lectronique de contact
+label.motDePasse.Entreprise=Mot de passe
+label.siteWebEntreprise.Entreprise=Site Web
+
+#-- Erreur formualire Inscription Entreprise
+error.nomEntreprise.required=Le champ Nom Entreprise doit \u00eatre rempli.
+error.mailEntreprise.required=Le champ Adresse \u00e9lectronque doit \u00eatre rempli. 
+error.mailEntreprise2.required=Remplir \u00e0 nouveau l'adresse mail
+error.siteWebEntreprise.required=Le champ site Web doit \u00eatre rempli
+error.motDePasse.required=Le champ Mot de passe doit \u00eatre rempli
+
+
 error.login=Compte
 error.login.required=Le champ Compte doit \u00eatre rempli.
 
