Mise en place de Tiles.
Quelques commentaires dans le controlleur.

--- a/src/java/com/myapp/struts/ApplicationResource.properties
+++ b/src/java/com/myapp/struts/ApplicationResource.properties
@@ -98,3 +98,18 @@ error.pass.required=Le champ Mot de passe doit \u00eatre rempli.
 error.account=Erreur lors de connexion au compte
 error.account.nofind=Aucun compte ne correspond au {0} : {1}
 error.account.manyfinds=Plusieurs comptes correspondes au {0} : {1}
+
+error.inscription.etudiant.nom.manqant=La champ Nom doit \u00eatre rempli.
+error.inscription.etudiant.nom.tropLong=La champ Nom est limit\u00e9 \u00e0 30 caract\u00e9res.
+error.inscription.etudiant.nom.invalide=La champ Nom contient des caract\u00e9res invalides.
+error.inscription.etudiant.prenom.manqant=La champ Prenom doit \u00eatre rempli.
+error.inscription.etudiant.prenom.tropLong=La champ Prenom est limit\u00e9 \u00e0 30 caract\u00e9res.
+error.inscription.etudiant.prenom.invalide=La champ Prenom contient des caract\u00e9res invalides.
+error.inscription.etudiant.mail.invalide=La champ Mail doit \u00eatre correctement rempli.
+error.inscription.etudiant.mail.manquant=La champ Mail doit \u00eatre rempli.
+error.inscription.etudiant.mail.tropLong=La champ Mail est limit\u00e9 \u00e0 30 caract\u00e9res.
+error.inscription.etudiant.mail.verifInvalid=La contenu du champ de verification du Mail doit \u00eatre est incorrecte.
+error.inscription.etudiant.pass.huitChars=La mot de passe doit contenir huit caract\u00e9res.
+error.inscription.etudiant.pass.invalid=La mot de passe doit contenir des chiffres ou des lettres.
+error.inscription.etudiant.pass.manquant=La champ mot de passe doit \u00eatre rempli.
+error.inscription.etudiant.pass.naissance=La champ Date de Naissance doit \u00eatre rempli.
