Ajout de 2 fonctionnalités : --> Ajout photo de profi -->Ajout du poste ATTENTION: Pensez à modifier le chemin dans UploadFileService car il est mis en dur (j'ai pas vu une autre alternative)

--- a/src/java/com/myapp/struts/ApplicationResource.properties
+++ b/src/java/com/myapp/struts/ApplicationResource.properties
@@ -81,7 +81,7 @@ label.mail.Entreprise2=Saisissez \u00e0 nouveau l'adresse \u00e9lectronique de c
 label.motDePasse.Entreprise=Mot de passe
 label.siteWebEntreprise.Entreprise=Site Web
 
-#-- Erreur formualire Inscription Entreprise
+#-- Erreur formualaire Inscription Entreprise
 error.nomEntreprise.required=Le champ Nom Entreprise doit \u00eatre rempli.
 error.mailEntreprise.required=Le champ Adresse \u00e9lectronque doit \u00eatre rempli. 
 error.mailEntreprise2.required=Remplir \u00e0 nouveau l'adresse mail
@@ -98,6 +98,8 @@ error.pass.required=Le champ Mot de passe doit \u00eatre rempli.
 error.account=Erreur lors de connexion au compte
 error.account.nofind=Aucun compte ne correspond au {0} : {1}
 error.account.manyfinds=Plusieurs comptes correspondes au {0} : {1}
+
+#--Erreur formulaire inscription etudiant
 
 error.inscription.etudiant.nom.manqant=La champ Nom doit \u00eatre rempli.
 error.inscription.etudiant.nom.tropLong=La champ Nom est limit\u00e9 \u00e0 30 caract\u00e9res.
