Gestion des erreurs au niveau de la modification du compte Etudiant Administration Compte Entreprise

--- a/src/java/com/myapp/struts/ApplicationResource.properties
+++ b/src/java/com/myapp/struts/ApplicationResource.properties
@@ -115,3 +115,19 @@ error.inscription.etudiant.pass.huitChars=La mot de passe doit contenir huit car
 error.inscription.etudiant.pass.invalid=La mot de passe doit contenir des chiffres ou des lettres.
 error.inscription.etudiant.pass.manquant=La champ mot de passe doit \u00eatre rempli.
 error.inscription.etudiant.pass.naissance=La champ Date de Naissance doit \u00eatre rempli.
+
+#--Erreur modification de Poste
+error.modification.poste.intitule.manqant=Le champ Poste occup\u00e9  doit \u00eatre rempli
+error.modification.poste.description.manqant=Le champ Description du poste doit \u00eatre rempli
+error.modification.poste.salaire.manqant=Le champ Salaire du poste doit \u00eatre rempli
+error.modification.poste.salaire.invalid1=Le champ Salaire ne doit contenir que des chiffres et une fois le caract\u00e9re '.'
+error.modification.poste.salaire.2points=Le champ Salaire ne doit contenir qu'un seul '.'
+error.modification.poste.salaire.invalid2=Le salaire doit contenir au maximum 6 chiffres avant l\u00e9 '.' et 2 apr\u00e9s.
+error.modification.poste.dateEmbauche.manqant=Le champ date doit \u00eatre rempli
+error.modification.poste.dateEmbauche.incorrect=Le champ date est incorrect Respectez le format(MM/JJ/AAAA)
+
+#--Erreur modification de l'Etudiant
+error.modification.etudiant.adresse.manqant=Le champ Adresse  doit \u00eatre rempli
+error.modification.etudiant.adresse.tropCourt=Le champ Adresse doit au moins contenir 40 caract\u00e9res
+error.modification.etudiant.date.toLong=Le num\u00e9ro de t\u00e9l\u00e9phone est incorrect
+error.modification.etudiant.telephone.incorrect=Le num\u00e9ro de t\u00e9l\u00e9phone ne doit contenir que des chiffres
